--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,10 @@ mccabe==0.7.0
 mypy-extensions==1.0.0
 packaging==24.0
 pathspec==0.12.1
+pillow==10.2.0
 platformdirs==4.2.1
 pycodestyle==2.11.1
 pyflakes==3.2.0
 python-dotenv==1.0.1
 sqlparse==0.5.0
+Pillow==10.2.0
